--- a/app/src/main/res/layout/drawer_person.xml
+++ b/app/src/main/res/layout/drawer_person.xml
@@ -8,6 +8,15 @@
             name="click"
             type="android.view.View.OnClickListener" />
 
+        <variable
+            name="itemIcon"
+            type="android.graphics.drawable.Drawable" />
+
+        <variable
+            name="itemTitle"
+            type="String" />
+
+
     </data>
 
     <androidx.appcompat.widget.LinearLayoutCompat
@@ -17,15 +26,17 @@
         android:onClick="@{click::onClick}"
         android:orientation="horizontal">
         <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/ivPIcon"
+            android:id="@+id/ivIcon"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:backgroundTint="@null"
             android:layout_weight="10"
-            android:src="@drawable/icon_drawer_person"/>
-
+            android:src="@{itemIcon}"
+            tools:src="@drawable/icon_drawer_person"/>
+<!--        android:src="@drawable/icon_drawer_person"-->
+<!--        icon_drawer_set-->
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/listPTitle"
+            android:id="@+id/listTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="10dp"
@@ -33,7 +44,8 @@
             android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
             android:textColor="@android:color/white"
             android:textSize="30sp"
-            android:text="@string/person_info"
-            android:layout_weight="2"/>
+            android:text="@{itemTitle}"
+            android:layout_weight="2"
+            tools:text="@string/person_info"/>
     </androidx.appcompat.widget.LinearLayoutCompat>
 </layout>
