--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -85,7 +85,7 @@
                 android:padding="16dp"
                 android:text="@={entity.account}"
                 android:textColor="@color/white"
-                android:textColorHint="@color/white"
+                android:textColorHint="@color/grey"
                 android:textSize="@dimen/textSizeMedium"
                 app:layout_constraintBottom_toTopOf="@+id/et_password"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -122,7 +122,7 @@
                 android:padding="16dp"
                 android:text="@={entity.password}"
                 android:textColor="@color/white"
-                android:textColorHint="@color/white"
+                android:textColorHint="@color/grey"
                 android:textSize="@dimen/textSizeMedium"
                 app:layout_constraintBottom_toTopOf="@+id/btn_login"
                 app:layout_constraintEnd_toEndOf="parent"
