--- a/app/src/main/res/layout/fragment_bedside_monitor.xml
+++ b/app/src/main/res/layout/fragment_bedside_monitor.xml
@@ -102,7 +102,10 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/btn_login_white"
                 android:gravity="center"
-                android:padding="20dp"
+                android:paddingTop="20dp"
+                android:paddingBottom="20dp"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/iv_frame_bed"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -136,7 +139,7 @@
                         android:paddingBottom="10dp"
                         android:text="@{entity.heartRate.length > 0 ? entity.heartRate : @string/no_data_text}"
                         android:textColor="@{entity.heartRate.length > 0 ? entity.heartRateTextColor :   @color/radar_out_bed_color}"
-                        android:textSize="36sp"
+                        android:textSize="32sp"
                         tools:text="66"
                         tools:textColor="#66BAFF" />
 <!--                    android:textColor="@{entity.textColorBedStatus == -1 ? @color/radar_out_bed_color : entity.bodyTemperatureTextColor }"-->
@@ -187,7 +190,7 @@
                         android:paddingBottom="10dp"
                         android:text="@{entity.breathState.length > 0 ? entity.breathState : @string/no_data_text}"
                         android:textColor="@{entity.breathState.length > 0 ? entity.breathStateTextColor : @color/radar_out_bed_color }"
-                        android:textSize="36sp"
+                        android:textSize="32sp"
                         tools:text="16"
                         tools:textColor="#66BAFF" />
 <!--                    android:text="@{entity.breathState.length > 0 ? entity.breathState : @string/no_data_text}"-->
@@ -243,8 +246,8 @@
                         android:paddingBottom="10dp"
                         android:text="@{entity.bodyTemperature == BedsideMonitorEntity.BODY_TEMPERATURE_ERROR  ? @string/no_data_text : entity.bodyTemperature}"
                         android:textColor="@{entity.bodyTemperature == BedsideMonitorEntity.BODY_TEMPERATURE_ERROR  ? @color/radar_out_bed_color : entity.bodyTemperatureTextColor }"
-                        android:textSize="36sp"
-                        tools:text="16"
+                        android:textSize="32sp"
+                        tools:text="16.6"
                         tools:textColor="#66BAFF" />
 
                     <androidx.appcompat.widget.AppCompatTextView
