改成token使用機制 api調整 ui與錯誤顯示調整 token錯誤強制登出

--- a/app/src/main/res/layout/dialog_temperature_set.xml
+++ b/app/src/main/res/layout/dialog_temperature_set.xml
@@ -61,6 +61,7 @@
                     android:gravity="center"
                     android:hint="@string/temperature_calibration_hit"
                     android:inputType="numberDecimal"
+                    android:imeOptions="actionDone"
                     android:digits="0123456789."
                     android:maxLength="5"
                     android:maxLines="1"
